--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,15 +3,21 @@
     --white: #ffffff;
     --gray-100: #e1e1e6;
     --gray-300: #c4c4cc;
-    --grat-400: #8d8d99;
+    --gray-400: #8d8d99;
     --gray-600: #323238;
     --gray-700: #29292e;
     --gray-800: #202024;
     --gray-900: #121214;
 
+    --green-300: #00B37E;
     --green-500: #00875f;
 
 }
+:focus {
+    outline: transparent !important;
+    box-shadow: 0 0 0 2px var(--green-500)
+}
+
 * {
     padding: 0;
     margin: 0;
