--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -47,8 +47,8 @@
 
 .author img {
     box-sizing: initial;
-    width: 3rem;
-    height: 3rem;
+    width: calc(3rem + 12px);
+    height: calc(3rem + 12px);
     border-radius: 8px;
 
     border: 4px solid var(--gray-800);
