Create Feature Delete and Like

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -112,6 +112,16 @@
     cursor: pointer;
     transition: background .1s;
 }
-.commentForm button[type="submit"]:hover {
+
+.commentForm button[type="submit"]:not(:disabled):hover {
     background: var(--green-300);
+}
+
+.commentForm button[type="submit"]:disabled {
+    opacity: .7;
+    cursor: not-allowed;
+}
+
+.commentList {
+    margin-top: 2rem;
 }
